--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@
 
 header{
     width: 100%;
-    background-color: lightblue;
+    background-color: navy;
     padding: 25px;
  
 }
@@ -36,6 +36,6 @@ p{
 button{
     height: 150px;
     width: 250px;
-    background-color: lightblue;
+    background-color: navy;
     font-size: 20px;
 }
