--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@
 
 header{
     width: 100%;
-    background-color: white;
+    background-color: navy;
     padding: 25px;
  
 }
@@ -36,7 +36,7 @@ h1{
 button{
     height: 100px;
     width: 250px;
-    background-color: whitesmoke;
+    background-color: navy;
     font-size: 20px;
 }
 
